--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb://localhost:27017/b
+MONGODB_URL=mongodb+srv://biringaninedorahkindja:PVanMlzQszrXJ81y@cluster0.a9mhdlc.mongodb.net/books?retryWrites=true&w=majority&appName=Cluster0
 PORT =4000
